clang/test/BSC/Negative/Method/This/this_as_first_parameter/member_function_this_parameter_definition/member_function_this_parameter_definition.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};
owned struct Bar {
public:
  int a;
};

int struct Foo::getA(This borrow this) { // expected-error {{borrow type requires a pointer or reference ('This' is invalid)}}
  return 0;
}

int struct Foo::getB(struct Foo borrow this) { // expected-error {{borrow type requires a pointer or reference ('struct Foo' is invalid)}}
  return 0;
}

int struct Foo::getC(const This borrow this) { // expected-error {{borrow type requires a pointer or reference ('This' is invalid)}}
  return 0;
}

int struct Foo::getC_2(const struct Foo borrow this) { // expected-error {{borrow type requires a pointer or reference ('struct Foo' is invalid)}}
  return 0;
}
int struct Foo::getD(This owned this) { // expected-error {{owned type requires a pointer, 'owned This' is invalid}}
  return 0;
}
int struct Foo::getD_2(struct Foo owned this) { // expected-error {{owned type requires a pointer, 'owned struct Foo' is invalid}}
  return 0;
}



// error member functions definition for owned struct
int Bar::getA(const This this) { // ok
  return 0;
}

int Bar::getB(This this) { // ok
  return 0;
}

int Bar::getB_2(Bar this) { // ok
  return 0;
}

int Bar::getC(This owned this) { // expected-error {{owned type requires a pointer, 'owned This' is invalid}}
  return 0;
}

// expected-warning@+1 {{duplicate 'owned' declaration specifier}}
int Bar::getC_2(Bar owned this) {
  return 0;
}
